--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -32,6 +32,7 @@ header button:hover {
 
 .header-title{
     cursor: pointer;
+    margin-left: 50px;
 }
 
 .header-right {
@@ -40,6 +41,17 @@ header button:hover {
     align-items: center;
 }
 
+.header-search{
+    width: 60%;
+}
+
+.header-search input{
+    width: 80%;
+    padding: 5px 15px;
+    font-size: 18pt;
+    border-radius: 10px;
+    outline: 0;
+}
 
 .header-basket h2 {
     display: flex;
@@ -61,4 +73,8 @@ header button:hover {
 .header-basket:hover {
     color: #be3144;
     transition: .5s;
+}
+
+.header-admin{
+    margin-right: 40px;
 }
